manifests/etcd/service.yaml
# manifests/etcd/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: etcd
  namespace: default
  labels:
    app: etcd
    component: database
    version: v3.6.0
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: etcd
  publishNotReadyAddresses: true
  ports:
  - name: etcd-client
    port: 2379
    targetPort: 2379
  - name: etcd-server
    port: 2380
    targetPort: 2380
  - name: etcd-metrics
    port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: etcd-client
  namespace: default
  labels:
    app: etcd
    component: database
    version: v3.6.0
spec:
  selector:
    app: etcd
  ports:
  - name: client
    port: 2379
    targetPort: 2379
  type: ClusterIP
